P3/test/pl0/error/error16.pl0
var a;

begin
	a:=1;
	if a>1;
end.
